navbar spacing fix

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,4 +1,4 @@
-@import url('sitewide.css');
+
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css");
 
 
@@ -8,6 +8,7 @@
     font-family: var(--default-font);
     font-style: oblique;
     margin: 0;
+    padding: 0;
     color: black;
 }
 
